[gd_scene load_steps=6 format=3 uid="uid://duvnm3asxykhb"]

[ext_resource type="PackedScene" uid="uid://b25ew1dv5tplj" path="res://card.tscn" id="1_ayhm6"]
[ext_resource type="Script" path="res://game_room.gd" id="1_fgygk"]
[ext_resource type="Script" path="res://deck.gd" id="2_mgxd7"]
[ext_resource type="PackedScene" uid="uid://ccbm2fm8ej331" path="res://player.tscn" id="3_qs578"]
[ext_resource type="Texture2D" uid="uid://ddapr4j4223dn" path="res://menu.png" id="5_ihfpa"]

[node name="GameRoom" type="Node2D"]
script = ExtResource("1_fgygk")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Table" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 650.0
color = Color(0.00392157, 0.427451, 0.160784, 1)

[node name="Deck" type="Node2D" parent="."]
position = Vector2(1060.33, 550)
script = ExtResource("2_mgxd7")

[node name="1" parent="Deck" instance=ExtResource("1_ayhm6")]
position = Vector2(6, 6)

[node name="2" parent="Deck" instance=ExtResource("1_ayhm6")]
position = Vector2(4, 4)

[node name="3" parent="Deck" instance=ExtResource("1_ayhm6")]
position = Vector2(2, 2)

[node name="4" parent="Deck" instance=ExtResource("1_ayhm6")]

[node name="River" type="Node2D" parent="."]
visible = false
position = Vector2(576, 324)

[node name="1" parent="River" instance=ExtResource("1_ayhm6")]
position = Vector2(-150, 0)

[node name="2" parent="River" instance=ExtResource("1_ayhm6")]
position = Vector2(-75, 0)

[node name="3" parent="River" instance=ExtResource("1_ayhm6")]

[node name="4" parent="River" instance=ExtResource("1_ayhm6")]
position = Vector2(75, 0)

[node name="5" parent="River" instance=ExtResource("1_ayhm6")]
position = Vector2(150, 0)

[node name="Players" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="Player1" parent="Players" instance=ExtResource("3_qs578")]
position = Vector2(0, 240)

[node name="Player8" parent="Players" instance=ExtResource("3_qs578")]
position = Vector2(275, 183)

[node name="Player3" parent="Players" instance=ExtResource("3_qs578")]
position = Vector2(390, 0)

[node name="Player5" parent="Players" instance=ExtResource("3_qs578")]
position = Vector2(275, -183)

[node name="Player2" parent="Players" instance=ExtResource("3_qs578")]
position = Vector2(0, -260)

[node name="Player7" parent="Players" instance=ExtResource("3_qs578")]
position = Vector2(-275, -183)

[node name="Player4" parent="Players" instance=ExtResource("3_qs578")]
position = Vector2(-390, 0)

[node name="Player6" parent="Players" instance=ExtResource("3_qs578")]
position = Vector2(-275, 183)

[node name="enter_code" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="img" type="Sprite2D" parent="enter_code"]
position = Vector2(0, -100)
scale = Vector2(1.89062, 1.89062)
texture = ExtResource("5_ihfpa")

[node name="welcome" type="Label" parent="enter_code"]
offset_left = -245.0
offset_top = -159.0
offset_right = 261.0
offset_bottom = -116.0
text = "BIENVENUE AU CASINO"

[node name="server_key" type="LineEdit" parent="enter_code"]
offset_left = -256.0
offset_top = -100.0
offset_right = 261.0
offset_bottom = -44.0
placeholder_text = "Copie-colle ici la cl√© de la partie stp mon boeuf"
alignment = 1
max_length = 50

[connection signal="text_submitted" from="enter_code/server_key" to="." method="_on_server_key_text_submitted"]
