[gd_scene load_steps=27 format=3 uid="uid://duvnm3asxykhb"]

[ext_resource type="Script" uid="uid://jnip2umdhcrk" path="res://gdscript/game_room.gd" id="1_2qplw"]
[ext_resource type="Script" uid="uid://54m2qtpcrd44" path="res://gdscript/deck.gd" id="2_6g2tb"]
[ext_resource type="Texture2D" uid="uid://c5xh11fsn7rwc" path="res://assets/casino_blurred.png" id="2_ctk2m"]
[ext_resource type="PackedScene" uid="uid://maipilee56om" path="res://scenes/background_particles.tscn" id="3_0t0sp"]
[ext_resource type="Shader" uid="uid://dhtrfbqau0m46" path="res://shaders/table.gdshader" id="3_7c0aq"]
[ext_resource type="PackedScene" uid="uid://b25ew1dv5tplj" path="res://scenes/card.tscn" id="3_r7l47"]
[ext_resource type="Script" uid="uid://ds6frx281fnro" path="res://scenes/title_screen.gd" id="4_0emb5"]
[ext_resource type="PackedScene" uid="uid://ccbm2fm8ej331" path="res://scenes/player.tscn" id="4_8otjw"]
[ext_resource type="Texture2D" uid="uid://ct4ic0w4wce2q" path="res://assets/velvet.png" id="4_qfild"]
[ext_resource type="Texture2D" uid="uid://cwefci3c0xreg" path="res://assets/title_background.png" id="4_w0exb"]
[ext_resource type="Texture2D" uid="uid://dxoa4qlu4o1bj" path="res://assets/wood.png" id="5_i1xx5"]
[ext_resource type="AudioStream" uid="uid://di7vho5ylh664" path="res://assets/count_to3.mp3" id="5_rx1b2"]
[ext_resource type="Texture2D" uid="uid://biuaknrdsu3pt" path="res://assets/money_bag.png" id="6_gpvgl"]
[ext_resource type="Script" uid="uid://b7xhf2myubfum" path="res://scenes/money.gd" id="6_ij5t4"]
[ext_resource type="Texture2D" uid="uid://ck30m32aswpla" path="res://assets/poker-chip.png" id="7_5eqtb"]
[ext_resource type="PackedScene" uid="uid://dq5d1iw451jay" path="res://scenes/pop_up.tscn" id="9_qktb6"]
[ext_resource type="Theme" uid="uid://cdvctlg72he3p" path="res://assets/ui.tres" id="10_p7uy6"]
[ext_resource type="PackedScene" uid="uid://dtqyjjeakp1v" path="res://scenes/music_player.tscn" id="14_0rgw7"]
[ext_resource type="Script" uid="uid://7glo8ebeohq6" path="res://scenes/button.gd" id="15_0rgw7"]
[ext_resource type="Texture2D" uid="uid://beyowmfcbm5ib" path="res://assets/title.png" id="17_jn4qs"]

[sub_resource type="Curve" id="Curve_5eqtb"]
_data = [Vector2(0, 0.494444), 0.0, 0.0, 0, 0, Vector2(1, 0.4), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_eanov"]
curve = SubResource("Curve_5eqtb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_eanov"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -180, 0)
emission_shape = 3
emission_box_extents = Vector3(700, 1, 1)
gravity = Vector3(0, 250, 0)
alpha_curve = SubResource("CurveTexture_eanov")
hue_variation_min = -0.5
hue_variation_max = 0.3

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5eqtb"]
particle_flag_disable_z = true
angle_min = -9.99999
angle_max = 10.0
direction = Vector3(0, -1, 0)
spread = 48.0
initial_velocity_min = 500.0
initial_velocity_max = 650.01
gravity = Vector3(0, 550, 0)
hue_variation_min = -0.4
hue_variation_max = 0.4

[sub_resource type="Curve2D" id="Curve2D_jn4qs"]
_data = {
"points": PackedVector2Array(-15.3731, 2.19615, 15.3731, -2.19615, 796, 545, 11.7128, 8.7846, -11.7128, -8.7846, 336, 541, -9.075, 7.865, 9.075, -7.865, 328, 105, -9.075, -7.26, 9.075, 7.26, 875, 107, 6.05, -9.68, -6.05, 9.68, 876, 372, -40.5866, -121.767, 40.5866, 121.767, 295, 364, 0, 0, 0, 0, 576, 326)
}
point_count = 7

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qblcs"]
shader = ExtResource("3_7c0aq")
shader_parameter/noise = ExtResource("4_qfild")
shader_parameter/wood = ExtResource("5_i1xx5")

[node name="GameRoom" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_2qplw")

[node name="Requests" type="Node2D" parent="."]

[node name="Register" type="HTTPRequest" parent="Requests"]

[node name="Cards" type="HTTPRequest" parent="Requests"]

[node name="TryAgain" type="Timer" parent="Requests"]
one_shot = true

[node name="Ready" type="HTTPRequest" parent="Requests"]

[node name="UpdateTimer" type="Timer" parent="Requests"]
wait_time = 0.8

[node name="Update" type="HTTPRequest" parent="Requests"]

[node name="Fold" type="HTTPRequest" parent="Requests"]

[node name="Check" type="HTTPRequest" parent="Requests"]

[node name="Bet" type="HTTPRequest" parent="Requests"]

[node name="Showdown" type="HTTPRequest" parent="Requests"]

[node name="CardToVFX" type="HTTPRequest" parent="Requests"]

[node name="ServerGo" type="HTTPRequest" parent="Requests"]

[node name="Unspectate" type="HTTPRequest" parent="Requests"]

[node name="WaitBeforeUpdate" type="Timer" parent="Requests"]
one_shot = true

[node name="MusicPlayer" parent="." instance=ExtResource("14_0rgw7")]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(573, 323.036)
scale = Vector2(0.842647, 0.841052)
texture = ExtResource("2_ctk2m")

[node name="TitleScreen" type="Node2D" parent="."]
script = ExtResource("4_0emb5")

[node name="TitleMusic" type="AudioStreamPlayer2D" parent="TitleScreen"]
stream = ExtResource("5_rx1b2")

[node name="TitleBackground" type="Sprite2D" parent="TitleScreen"]
position = Vector2(573, 323.036)
scale = Vector2(0.842647, 0.841052)
texture = ExtResource("4_w0exb")

[node name="ChipRain" type="GPUParticles2D" parent="TitleScreen"]
position = Vector2(579, 5)
emitting = false
amount = 69
texture = ExtResource("7_5eqtb")
lifetime = 2.8
process_material = SubResource("ParticleProcessMaterial_eanov")

[node name="ChipExplosion" type="GPUParticles2D" parent="TitleScreen"]
position = Vector2(578, 241)
emitting = false
amount = 32
texture = ExtResource("7_5eqtb")
lifetime = 5.0
one_shot = true
explosiveness = 0.95
randomness = 0.01
process_material = SubResource("ParticleProcessMaterial_5eqtb")

[node name="Title" type="Sprite2D" parent="TitleScreen"]
position = Vector2(578, 241)
scale = Vector2(1.675, 1.675)
texture = ExtResource("17_jn4qs")

[node name="BoingStart" type="Timer" parent="TitleScreen/Title"]
wait_time = 3.3
one_shot = true
autostart = true

[node name="BoingEnd" type="Timer" parent="TitleScreen/Title"]
wait_time = 3.55
one_shot = true
autostart = true

[node name="Rythm" type="Timer" parent="TitleScreen/Title"]
wait_time = 0.992

[node name="StartDancing" type="Timer" parent="TitleScreen/Title"]
wait_time = 4.15
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="TitleScreen"]
follow_viewport_enabled = true

[node name="Play" type="Button" parent="TitleScreen/CanvasLayer"]
offset_left = 489.0
offset_top = 449.0
offset_right = 661.0
offset_bottom = 534.0
pivot_offset = Vector2(86, 42.5)
theme = ExtResource("10_p7uy6")
theme_override_font_sizes/font_size = 51
disabled = true
toggle_mode = true
text = "JOUER"
script = ExtResource("15_0rgw7")

[node name="StartZoomOut" type="Timer" parent="TitleScreen"]
wait_time = 2.7
one_shot = true
autostart = true

[node name="Path2D" type="Path2D" parent="TitleScreen"]
curve = SubResource("Curve2D_jn4qs")

[node name="PathFollow2D" type="PathFollow2D" parent="TitleScreen/Path2D"]
position = Vector2(865.087, 371.857)
rotation = -3.0291
progress = 1721.5
loop = false

[node name="Camera2D" type="Camera2D" parent="TitleScreen/Path2D/PathFollow2D"]
position = Vector2(-1.99078, -3.00613)
zoom = Vector2(4.65, 4.65)
position_smoothing_speed = 50.0

[node name="BackgroundParticles" parent="." instance=ExtResource("3_0t0sp")]
visible = false

[node name="Table" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_qblcs")
offset_left = 123.0
offset_top = 1.0
offset_right = 1030.0
offset_bottom = 657.0
color = Color(0, 0.6, 0, 1)

[node name="Money" type="Node2D" parent="."]
visible = false
position = Vector2(204, 97)
scale = Vector2(0.71, 0.71)
script = ExtResource("6_ij5t4")

[node name="MoneyBag1" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(696, 341)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag2" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(663, 376)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag3" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(728, 378)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag4" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(764, 358)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag5" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(789, 375)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag6" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(724, 400)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag7" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(640, 417)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag8" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(685, 431)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag9" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(746, 430)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="MoneyBag10" type="Sprite2D" parent="Money"]
visible = false
position = Vector2(791, 429)
scale = Vector2(0.715, 0.715)
texture = ExtResource("6_gpvgl")

[node name="TotalBet" type="Label" parent="Money"]
offset_left = -246.0
offset_top = 324.0
offset_right = 1294.0
offset_bottom = 379.0
theme = ExtResource("10_p7uy6")
theme_override_font_sizes/font_size = 52
text = "Mise : 0€"
horizontal_alignment = 1

[node name="WinAnim" type="Timer" parent="Money"]
wait_time = 1.6
one_shot = true

[node name="Deck" type="Node2D" parent="."]
visible = false
position = Vector2(1060.33, 550)
script = ExtResource("2_6g2tb")

[node name="1" parent="Deck" instance=ExtResource("3_r7l47")]
position = Vector2(6, 6)

[node name="2" parent="Deck" instance=ExtResource("3_r7l47")]
position = Vector2(4, 4)

[node name="3" parent="Deck" instance=ExtResource("3_r7l47")]
position = Vector2(2, 2)

[node name="4" parent="Deck" instance=ExtResource("3_r7l47")]

[node name="Board" type="Node2D" parent="."]
position = Vector2(576, 268.145)

[node name="1" parent="Board" instance=ExtResource("3_r7l47")]
visible = false
position = Vector2(-150, 0)

[node name="2" parent="Board" instance=ExtResource("3_r7l47")]
visible = false
position = Vector2(-75, 0)

[node name="3" parent="Board" instance=ExtResource("3_r7l47")]
visible = false

[node name="4" parent="Board" instance=ExtResource("3_r7l47")]
visible = false
position = Vector2(75, 0)

[node name="5" parent="Board" instance=ExtResource("3_r7l47")]
visible = false
position = Vector2(150, 0)

[node name="Players" type="Node2D" parent="."]
position = Vector2(576, 300)

[node name="Player1" parent="Players" instance=ExtResource("4_8otjw")]
position = Vector2(0, 240)

[node name="Player8" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(275, 183)

[node name="Player3" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(390, 0)

[node name="Player5" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(275, -183)

[node name="Player2" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(0, -260)

[node name="Player7" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(-275, -183)

[node name="Player4" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(-390, 0)

[node name="Player6" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(-275, 183)

[node name="Player9" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(0, -260)

[node name="Player10" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(-275, -183)

[node name="Player11" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(-390, 0)

[node name="Player12" parent="Players" instance=ExtResource("4_8otjw")]
visible = false
position = Vector2(-275, 183)

[node name="EnterCode" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="CanvasLayer" type="CanvasLayer" parent="EnterCode"]
layer = 2
offset = Vector2(0, 700)
transform = Transform2D(1, 0, 0, 1, 0, 700)

[node name="PopUp" parent="EnterCode/CanvasLayer" instance=ExtResource("9_qktb6")]
position = Vector2(578, 324)

[node name="Name" type="LineEdit" parent="EnterCode/CanvasLayer"]
offset_left = 331.0
offset_top = 229.0
offset_right = 823.0
offset_bottom = 285.0
theme = ExtResource("10_p7uy6")
placeholder_text = "Ton pseudo :"
alignment = 1
max_length = 50

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
visible = false
follow_viewport_enabled = true

[node name="Round" type="Label" parent="UI"]
offset_left = 12.0
offset_top = 5.0
offset_right = 132.0
offset_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource("10_p7uy6")

[node name="WhoIsPlaying" type="Label" parent="UI"]
offset_left = 12.0
offset_top = 40.0
offset_right = 132.0
offset_bottom = 86.0
theme = ExtResource("10_p7uy6")

[node name="SeCoucher" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 511.0
offset_right = 153.0
offset_bottom = 568.0
pivot_offset = Vector2(71.5, 28.5)
theme = ExtResource("10_p7uy6")
disabled = true
text = "Se coucher"
script = ExtResource("15_0rgw7")

[node name="Surencherir" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 577.0
offset_right = 153.0
offset_bottom = 634.0
pivot_offset = Vector2(71.5, 28.5)
theme = ExtResource("10_p7uy6")
disabled = true
text = "surenchérir"
script = ExtResource("15_0rgw7")

[node name="HowMuch" type="SpinBox" parent="UI/Surencherir"]
layout_mode = 0
offset_left = 150.0
offset_right = 242.0
offset_bottom = 58.0
theme = ExtResource("10_p7uy6")
alignment = 1

[node name="Suivre" type="Button" parent="UI"]
offset_left = 9.0
offset_top = 451.0
offset_right = 154.0
offset_bottom = 501.0
pivot_offset = Vector2(71.5, 28.5)
theme = ExtResource("10_p7uy6")
disabled = true
text = "Suivre"
script = ExtResource("15_0rgw7")

[node name="Rejouer" type="Button" parent="UI"]
visible = false
offset_left = 516.0
offset_top = 380.0
offset_right = 634.0
offset_bottom = 431.0
pivot_offset = Vector2(59, 25.5)
theme = ExtResource("10_p7uy6")
text = "Rejouer"
script = ExtResource("15_0rgw7")

[node name="Rejoindre" type="Button" parent="UI"]
visible = false
offset_left = 516.0
offset_top = 380.0
offset_right = 634.0
offset_bottom = 431.0
pivot_offset = Vector2(59, 25.5)
theme = ExtResource("10_p7uy6")
text = "Rejoindre"
script = ExtResource("15_0rgw7")

[node name="CDSpectate" type="Timer" parent="UI"]
wait_time = 10.0
one_shot = true

[node name="FrontLayer" type="CanvasLayer" parent="."]

[node name="Fader" type="ColorRect" parent="FrontLayer"]
light_mask = 3
visibility_layer = 3
offset_left = -6.0
offset_top = -6.0
offset_right = 1158.0
offset_bottom = 652.0
color = Color(0, 0, 0, 0)

[node name="FirstFade" type="Timer" parent="FrontLayer/Fader"]
wait_time = 0.4
one_shot = true
autostart = true

[node name="SecondFade" type="Timer" parent="FrontLayer/Fader"]
wait_time = 1.3
one_shot = true
autostart = true

[node name="FadeDuration" type="Timer" parent="FrontLayer/Fader"]
wait_time = 0.4
one_shot = true

[node name="ServerGo" type="Button" parent="FrontLayer"]
offset_left = 16.0
offset_top = 381.0
offset_right = 154.0
offset_bottom = 431.0
pivot_offset = Vector2(69, 25)
theme = ExtResource("10_p7uy6")
text = "server go"
script = ExtResource("15_0rgw7")

[connection signal="request_completed" from="Requests/Register" to="." method="_on_register_completed"]
[connection signal="request_completed" from="Requests/Cards" to="." method="_on_cards_completed"]
[connection signal="timeout" from="Requests/TryAgain" to="." method="_on_try_again_timeout"]
[connection signal="request_completed" from="Requests/Ready" to="." method="_on_ready_completed"]
[connection signal="timeout" from="Requests/UpdateTimer" to="." method="_on_update_timer_timeout"]
[connection signal="request_completed" from="Requests/Update" to="." method="_on_update_completed"]
[connection signal="request_completed" from="Requests/Showdown" to="." method="_on_showdown_completed"]
[connection signal="request_completed" from="Requests/CardToVFX" to="." method="_on_card_to_vfx_request_completed"]
[connection signal="request_completed" from="Requests/Unspectate" to="." method="_on_unspectate_request_completed"]
[connection signal="timeout" from="Requests/WaitBeforeUpdate" to="." method="_on_wait_before_update_timeout"]
[connection signal="timeout" from="TitleScreen/Title/BoingStart" to="TitleScreen" method="_on_boing_timeout"]
[connection signal="timeout" from="TitleScreen/Title/BoingEnd" to="TitleScreen" method="_on_boing_end_timeout"]
[connection signal="timeout" from="TitleScreen/Title/StartDancing" to="TitleScreen" method="_on_start_dancing_timeout"]
[connection signal="toggled" from="TitleScreen/CanvasLayer/Play" to="TitleScreen" method="_on_play_toggled"]
[connection signal="timeout" from="TitleScreen/StartZoomOut" to="TitleScreen" method="_on_start_zoom_out_timeout"]
[connection signal="timeout" from="Money/WinAnim" to="Money" method="_on_win_anim_timeout"]
[connection signal="text_submitted" from="EnterCode/CanvasLayer/Name" to="." method="_on_name_text_submitted"]
[connection signal="pressed" from="UI/SeCoucher" to="." method="_on_se_coucher_pressed"]
[connection signal="pressed" from="UI/Surencherir" to="." method="_on_surencherir_pressed"]
[connection signal="pressed" from="UI/Suivre" to="." method="_on_suivre_pressed"]
[connection signal="pressed" from="UI/Rejouer" to="." method="_on_rejouer_pressed"]
[connection signal="pressed" from="UI/Rejoindre" to="." method="_on_rejoindre_pressed"]
[connection signal="timeout" from="UI/CDSpectate" to="." method="_on_cd_spectate_timeout"]
[connection signal="timeout" from="FrontLayer/Fader/FirstFade" to="TitleScreen" method="_on_first_fade_timeout"]
[connection signal="timeout" from="FrontLayer/Fader/SecondFade" to="TitleScreen" method="_on_second_fade_timeout"]
[connection signal="timeout" from="FrontLayer/Fader/FadeDuration" to="TitleScreen" method="_on_fade_duration_timeout"]
[connection signal="pressed" from="FrontLayer/ServerGo" to="." method="_on_server_go_pressed"]
